--- a/css/pages/category.css
+++ b/css/pages/category.css
@@ -29,3 +29,26 @@
   font-size: 0.9rem;
   font-weight: 400;
 }
+
+.breadcrumb {
+  font-size: 14px;
+  color: #666;
+  margin-bottom: 10px;
+}
+
+.breadcrumb a {
+  color: #0070f3;
+  text-decoration: none;
+}
+
+.breadcrumb a:hover {
+  text-decoration: underline;
+}
+
+/* Tom kategori melding */
+.empty-message {
+  text-align: center;
+  font-size: 18px;
+  color: #555;
+  margin: 30px 0;
+}
