--- a/css/pages/product-page.css
+++ b/css/pages/product-page.css
@@ -378,3 +378,38 @@
   padding-top: 2rem;
 }
 
+
+/* ================================
+STØRRE HOVEDBILDE PRODUCT.HTML
+================================ */
+
+#main-image {
+  width: 100%;
+  max-width: 550px; /* øker størrelse */
+  border-radius: 10px;
+  border: 2px solid #000; /* svart ramme */
+  object-fit: contain;
+}
+
+/* ==================================
+SORT RAMME RUNDT HOVEDBILDET
+================================== */
+
+.thumb.active {
+  border-color: #000 !important;
+}
+
+/* ==================================
+MELLOMROM THUMBNAILS -> HOVEDBILDE
+================================== */
+
+.thumbnails {
+  margin-right: 10px;
+}
+
+
+.main-header {
+  position: sticky;
+  top: 0;
+  z-index: 5000;
+}    
